[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imgbb-mcp"
version = "1.0.0"
description = "免费图床 MCP 服务 - 将图片上传到 ImgBB 并获取公网链接"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
imgbb-mcp = "mcp_server:main"

[tool.setuptools.packages.find]
include = ["imgbb_mcp*"]
